# od_tools

./: .gitignore  .replit  Cargo.toml  LICENSE  README.md  TODO.md  cloudbuild.yaml  go.mod  justfile  replit.nix
.github/workflows/: release.yaml
calc/: package.json
calc/src/: utils.ts
calc/src/components/: BuildingsStats.tsx  JsonArea.tsx
calc/src/layouts/: Layout.astro
calc/src/pages/: index.astro
calc/src/store/: stats.ts
calc/src/types/: stats-json.ts  stats.ts
cloud/functions/generate-log/: function.go  go.mod
cmd/sim/: commands.go  main.go
data/: buildings.yml  land.yml
pkg/sim/: generate_log.go  generate_log_test.go  helpers.go  parse_log.go
sim/: helpers.go  parse_log.go
sim_log/: CHANGELOG  README.md  generate_log.go  generate_log_test.go  go.mod  justfile  main.go
src/: error.rs  generator.rs  main.rs
